# LLM-Rubric

./: README.md  SUPPORT.md  pyproject.toml
data/real_data/: gpt-3.5-turbo-16k_real_evaluations_FIXED.tsv  human_judges_real_convs_FIXED_ANON.tsv  real_data.json  real_dialogue_ids.tsv
data/synth_data/: gpt-3.5-turbo-16k_synth_evaluations_FIXED.tsv  human_judges_synth_all_FIXED_ANON.tsv  synth_dialogue_ids.tsv
experiments/real_data/: best_synth_cross-validation_hp.json  judge_map.json  llm_rubric_full_q0_model_params.pkl
experiments/real_data/predictions/: real_convs_human_baselines.tsv  real_convs_machine_baselines.tsv  real_convs_random_baseline.tsv
llm_rubric/: kfold_utils.py  llm_evaluator.py  pd_utils.py
llm_rubric/model/: torch_impl.py
scripts/: compute_human_baseline.py  compute_machine_baseline.py  compute_random_baseline.py  cross_validate_llm_rubric.py  evaluate.py  find_best_hyperparams.py  find_hyperparams_for_real_data_eval.sh  llm_rubric_predict.py  predict_llm_rubric_for_real_data_eval.sh  run_real_data_baselines.sh  train_llm_rubric.py  train_llm_rubric_for_real_data_eval.sh
