[tool.poetry]
name = "llm-rubric"
version = "0.1.0"
description = ""
authors = ["Chris Kedzie <chriskedzie@microsoft.com>"]
readme = "README.md"
packages = [{include = "llm_rubric"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.12.3"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pydantic = "^2.8.2"
tqdm = "^4.66.5"
pydantic-numpy = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
